add new function

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1>Hello World</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati similique cum sapiente sit blanditiis dicta ducimus magni error modi eum, harum accusamus voluptate excepturi. Dicta alias repellendus laboriosam numquam beatae.</p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus molestias rem earum, dolore, facere corrupti amet quaerat at voluptates ab blanditiis suscipit placeat ut nulla inventore tenetur adipisci? Sit, nam.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum consequuntur officiis odit alias temporibus cupiditate dolores repellendus voluptates eius, iusto, quos dolorem facilis iure voluptatum, quam ipsa dicta! Pariatur, vitae!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati labore, ad placeat aperiam debitis aut aspernatur perferendis similique porro, alias cumque ipsa enim molestiae inventore molestias velit dolorem at nobis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium iure minus ad est? Iste eum quae architecto nostrum atque temporibus obcaecati ad ab? Culpa, recusandae nisi! Delectus exercitationem porro nulla!</p>
 </body>
 </html>
