--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic necessitatibus voluptate eligendi harum unde eaque molestias dignissimos, numquam voluptates magnam blanditiis nesciunt? Ea nesciunt asperiores et deserunt dolor est ipsam!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit facilis debitis recusandae, a ab aperiam eaque nemo distinctio totam provident beatae, sapiente numquam nostrum temporibus. Deleniti ipsam dignissimos doloremque. Deserunt.</p>
+    <p>你今天很好！</p>
+    <p>我要加新功能了！！！</p>
+    <p>設計新的選單給原系統！！！</p>
 </body>
 </html>
